@@ -93,12 +93,15 @@
 		local path = ".\\foo"
 		local result = vs10_helpers.remove_relative_path(path)
 		test.isequal("foo",result)
-	end
+	end	
 	
+	--[[
+	never passed nil
 	function vs10_filters.listOfDirectories_passedNil_returnsIsEmpty()
 		local result = vs10_helpers.list_of_directories_in_path(nil)
 		test.isequal(0,#result)
 	end
+	--]]
 	
 	function vs10_filters.listOfDirectories_oneDirectory_returnsSizeIsOne()
 		local result = vs10_helpers.list_of_directories_in_path("foo\\bar.h")
@@ -120,6 +123,13 @@
 		test.isequal("foo\\bar",result[2])
 	end
 	
+	function vs10_filters.listOfDirectories_dotSlash_returnsIsEmpty()
+		local result = vs10_helpers.list_of_directories_in_path(".\\bar.h")
+		test.isequal(0,#result)
+	end
+	
+	
+	--not used in premake only the tests
 	function vs10_filters.tableOfFilters_emptyTable_returnsEmptyTable()
 		t = {}
 		local result = vs10_helpers.table_of_filters(t)
@@ -219,6 +229,10 @@
 		test.isequal(3,#result)
 	end		
 		
+	--
+		
+		
+	
 	function vs10_filters.tableOfFileFilters_returnSizeIsTwo()
 		local t =
 		{
@@ -360,7 +374,7 @@
 		test.string_contains(buffer,'<None')
 	end
 	
-	
+	--function is no longer used in code
 	function vs10_filters.tableOfFileFilters_filterContainsDots_bufferContainsTheEntry()
 		t =
 		{
@@ -369,6 +383,7 @@
 		local result = vs10_helpers.table_of_filters(t)
 		test.isequal(2,#result)
 	end	
+
 	function vs10_filters.tableOfFileFilters_filterContainsDots_resultsLengthIsThree()
 		t =
 		{
