@@ -26,6 +26,7 @@
 * Bug 3020382: GCC PCH not working
 * Bug 3016050: {"../Dir/file1.c","../../Dir/file2.c"} breaks Xcode (Stephane)
 * Bug 3015312: Makefiles are not quoted correctly
+* Bug 3097868: Patch 3076517 premake_rev465.patch. Removes relative paths from vs2010 filters (Robert Konrad)
 
 
 -------
